Bug 145091 - FILESAVE DOCX Table change tracking deleted row DOCX export wrong (visible only e.g. in Word or Google Docs)
Summary: FILESAVE DOCX Table change tracking deleted row DOCX export wrong (visible on...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: filter:docx
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2021-10-12 12:46 UTC by NISZ LibreOffice Team
Modified: 2021-12-21 08:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The bad export from Writer (5.01 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-10-12 12:47 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (2.87 KB, image/png)
2021-10-12 12:48 UTC, NISZ LibreOffice Team
Details
The test document (4.64 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-11-09 19:08 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-10-12 12:46:11 UTC
Description:
Reject a table deletion and then delete a row DOCX export is wrong:

Steps to Reproduce:
1.Open attached file
2.Reject all changes
3.Delete empty row
4.Save in docx then reopen it

Actual Results:
The export contains the entire table marked as deleted, as in the
as shown in the attached screenshot in Word 

Expected Results:
It should include the deletion of the middle row.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: c2de581d1943df2d84f2b71817b6a8bee41f0217
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-10-12 12:47:11 UTC
Created attachment 175689 [details]
The bad export from Writer
Comment 2 NISZ LibreOffice Team 2021-10-12 12:48:14 UTC
Created attachment 175690 [details]
Screenshot of the problem
Comment 3 Dieter 2021-10-30 04:31:55 UTC
I can't confirm it with

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 273a25c796fca9afa0dfadac57dc3f336831221c
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL

Is it correct, that source file is already a docx-file?

BTW: I also don't understand, why it blocks meta-bug "Track-Changes-Lists"
Comment 4 László Németh 2021-11-09 19:08:46 UTC
Created attachment 176171 [details]
The test document
Comment 5 László Németh 2021-11-09 19:11:20 UTC
@Dieter: thanks for your feedback (also for tdf#145089)! I've attached the real test document (deletion of the complete table).
Comment 6 László Németh 2021-11-12 07:41:35 UTC
Note: the problem with the exported document is visible only in Word or Google Docs.
Comment 7 Commit Notification 2021-11-15 08:27:23 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dbc2bdffbec9b3f7eba485652cdd43634458b5a6

tdf#145091 DOCX: don't export obsolete table row change data

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 NISZ LibreOffice Team 2021-12-07 13:11:21 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3a61cce54277fd12570103a191c50d9b37ef3dd3
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL