tdf#145091 DOCX: don't export obsolete table row change data

Rejection of table deletion or accepting table insertion
imported from a DOCX document kept row changes in DOCX export.
Use SwExtraRedlineTable/SwTableRowRedline data only if it's
not obsolete.

Follow-up of commit 05366b8e6683363688de8708a3d88cf144c7a2bf
"tdf#60382 sw offapi: add change tracking of table/row deletion".

Change-Id: I247e13e86c0115604079e4852aa8663f1bfead91
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125114
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>